--- a/data-structure/notebook.ipynb
+++ b/data-structure/notebook.ipynb
@@ -79,6 +79,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"95.5\" height=\"20\"><linearGradient id=\"smooth\" x2=\"0\" y2=\"100%\"><stop offset=\"0\" stop-color=\"#bbb\" stop-opacity=\".1\"/><stop offset=\"1\" stop-opacity=\".1\"/></linearGradient><clipPath id=\"round\"><rect width=\"95.5\" height=\"20\" rx=\"3\" fill=\"#fff\"/></clipPath><g clip-path=\"url(#round)\"><rect width=\"61.0\" height=\"20\" fill=\"#555\"/><rect x=\"61.0\" width=\"34.5\" height=\"20\" fill=\"#97CA00\"/><rect width=\"95.5\" height=\"20\" fill=\"url(#smooth)\"/></g><g fill=\"#fff\" text-anchor=\"middle\" font-family=\"DejaVu Sans,Verdana,Geneva,sans-serif\" font-size=\"110\"><text x=\"315.0\" y=\"150\" fill=\"#010101\" fill-opacity=\".3\" transform=\"scale(0.1)\" textLength=\"510.0\" lengthAdjust=\"spacing\">coverage</text><text x=\"315.0\" y=\"140\" transform=\"scale(0.1)\" textLength=\"510.0\" lengthAdjust=\"spacing\">coverage</text><text x=\"772.5\" y=\"150\" fill=\"#010101\" fill-opacity=\".3\" transform=\"scale(0.1)\" textLength=\"245.0\" lengthAdjust=\"spacing\">23%</text><text x=\"772.5\" y=\"140\" transform=\"scale(0.1)\" textLength=\"245.0\" lengthAdjust=\"spacing\">23%</text></g></svg>\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pybadges import badge\n",
+    "s = badge(left_text='coverage', right_text='23%', right_color='green')\n",
+    "# s is a string that contains the badge data as an svg image.\n",
+    "print(s)# => <svg height=\"20\" width=\"191.0\" xmlns=\"ht"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
